Bug 31866 - --enable-libdebuginfod=dummy does not work
Summary: --enable-libdebuginfod=dummy does not work
Status: RESOLVED FIXED
Alias: None
Product: elfutils
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-08 15:47 UTC by Andreas Schwab
Modified: 2024-06-08 17:43 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2024-06-08 15:47:28 UTC
$ ../elfutils/configure --prefix=/usr --enable-libdebuginfod=dummy
...
configure: error: unable to build libdebuginfod
Comment 1 Frank Ch. Eigler 2024-06-08 15:56:11 UTC
Hi, Andreas, could you share your config.log ?
Comment 3 Frank Ch. Eigler 2024-06-08 17:43:04 UTC
Thanks for the report.  I believe this is fixed with:

commit 5f14e59b8b3f252b91f6729d9c5086e069949cd1 (HEAD -> master, origin/main)
gpg: Signature made Sat 08 Jun 2024 01:42:27 PM EDT
gpg:                using RSA key 4DD136490411C0A42B28844F258B6EFA0F209D24
gpg: Good signature from "Frank Ch. Eigler <fche@elastic.org>" [ultimate]
Author: Frank Ch. Eigler <fche@redhat.com>
Date:   Sat Jun 8 13:31:09 2024 -0400

    PR31866: reenable --enable-libdebuginfod=dummy