PR31866: reenable --enable-libdebuginfod=dummy

Tweak configure.ac to support $subject again.  Also tweak
debuginfod-find.c to not unconditionally include json-c.h, since it
may just be compiled in "dummy" mode, sans such prerequisites.  It
turns out debuginfod-find fails at run time very early in such a
configuration, long before it gets to jsonic activities.

Signed-off-by: Frank Ch. Eigler <fche@redhat.com>